2000-07-25  Jochen Hoenicke  <jochen@gnu.org>

	* stage2/fsys_fat.c (fat_mount): Fixed calculation of num_clust.
	It was off by two, since the two non existing clusters 0 and 1
	were not taken into account.  Also fixed the boundary between
	FAT12 and FAT16.
	
2000-07-25  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/asm.S [!STAGE1_5] (linux_text_len): New variable.
	[!STAGE1_5] (linux_boot): Don't set %eax to LINUX_SETUP
	meaninglessly.
	Set %ecx to LINUX_TEXT_LEN instead of LINUX_KERNEL_MAXLEN.
	[!STAGE1_5] (big_linux_boot): Disable interrupts before changing
	the stack pointer.
	Change %ss right before %sp.
	Reverse the arguments for ljmp. A segment must be after an
	offset. *sigh*
	* stage2/boot.c (load_image): Set LINUX_TEXT_LEN to TEXT_LEN,
	if a Linux kernel is loaded successfully.
	* stage2/shared.h (LINUX_VID_MODE_OFFSET): Removed.
	[!ASM_FILE] (linux_kernel_header): Change the type of the member
	`heap_end_ptr' to unsigned short.
	[!ASM_FILE] (linux_text_len): Declared.
	
2000-07-24  OKUJI Yoshinori  <okuji@gnu.org>

	Comply with the Linux/i386 boot protocol version 2.02.
	
	* stage2/asm.S [!STAGE1_5] (linux_boot): Set the length of moved
	bytes to LINUX_KERNEL_MAXLEN instead of
	LINUX_KERNEL_LEN_OFFSET(%eax), since the field is obsolete.
	[!STAGE1_5] (big_linux_boot): Don't use SEGMENT or OFFSET.
	Instead, embed the segment and the offset in the code itself.
	Set %ds, %es, %fs and %gs to %ax (LINUX_INIT_SEG).
	* stage2/boot.c (load_image): Rewrite the Linux support code
	heavily. Use a structure instead of a batch of macros, to access
	a Linux kernel header.
	(load_initrd): If MOVETO plus LEN is greater than or equal to
	LINUX_INITRD_MAX_ADDRESS, set MOVETO to LINUX_INITRD_MAX_ADDRESS
	minus LEN with page aligned.
	* stage2/shared.h (LINUX_MAGIC_SIGNATURE): New macro.
	(LINUX_DEFAULT_SETUP_SECTS): Likewise.
	(LINUX_FLAG_CAN_USE_HEAP): Likewise.
	(LINUX_INITRD_MAX_ADDRESS): Likewise.
	(LINUX_MAX_SETUP_SECTS): Likewise.
	(LINUX_BOOT_LOADER_TYPE): Likewise.